fix: wrap resume buttons inside div called resume and add margin-bottom of 50px for spacing from form

--- a/styles.css
+++ b/styles.css
@@ -347,6 +347,9 @@ nav .bi {
 .contact-right form {
   width: 100%;
 }
+.resumes {
+  margin-bottom: 50px;
+}
 
 form input,
 form textarea {
